@startumlclassDiagram
             namespace common {
                 class RedTile {
                     <<record>>
                     +int x
                     +int y
                     +areaWith(other: RedTile) long
                 }
             }

             namespace b {
                 class Edge {
                     <<record>>
                     +RedTile a
                     +RedTile b
                     +isVertical() boolean
                     +isHorizontal() boolean
                     +minX() int
                     +maxX() int
                     +minY() int
                     +maxY() int
                 }

                 class TilePolygon {
                     -List~Edge~ edges
                     +TilePolygon(vertices: List~RedTile~)
                     +containsRectangle(t1: RedTile, t2: RedTile) boolean
                     -isPointInside(px: double, py: double) boolean
                     -validateVerticalLine(x: int, yMin: int, yMax: int) boolean
                     -validateHorizontalLine(y: int, xMin: int, xMax: int) boolean
                 }

                 class MovieTheater {
                     -List~RedTile~ tiles
                     -TilePolygon polygon
                     -MovieTheater(tiles: List~RedTile~)
                     +with(rawInput: String)$ MovieTheater
                     +largestValidArea() long
                 }

                 class Main {
                     +main(args: String[])$ void
                 }
             }

             Edge --> RedTile : conecta 2
             TilePolygon *-- Edge : se compone de
             MovieTheater *-- TilePolygon : delega geometría a
             MovieTheater o-- RedTile : contiene
             Main ..> MovieTheater : usa
@enduml